--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>learning git</title>
 </head>
 <body>
-    <h3> beginner guide to git and github!!</h3>
+    <h3> beginner guide to git and github!</h3>
 </body>
 </html>
