commmiting from login branch

--- a/login.html
+++ b/login.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>learning git and github</title>
+    <title>Login feature</title>
 </head>
 <body>
-    <h3> beginner guide to git and github!</h3>
+    
 </body>
 </html>
